--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 검색 엔진 크롤링 설정 -->
     <meta name="robots" content="index, follow" />
     <!-- canonical URL -->
-    <link rel="canonical" href="" />
+    <link rel="canonical" href="https://portfolio-site-younsongi.vercel.app/" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 사용되는 제목 -->
     <meta property="og:title" content="YounSongE의 포트폴리오 웹사이트" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 사이트 이름 -->
@@ -25,7 +25,10 @@
     <meta property="og:type" content="website" />
     <!-- Open Graph 프로토콜에서 사용되는 메타 태그의 속성 중 하나로, 페이지의 간략한 설명을 제공하는 데 사용 -->
     <!-- 소셜 미디어에서 공유될 때 사용되는 URL -->
-    <meta property="og:url" content="" />
+    <meta
+      property="og:url"
+      content="https://portfolio-site-younsongi.vercel.app/"
+    />
     <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 이미지 -->
     <meta property="og:image" content="img/turtle.png" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 사용되는 설명 -->
